add script compositor to support scala script